@@ -4,6 +4,8 @@ AUX gitea.initd-r1 688 BLAKE2B eb2341dee53f3fd92c49137855615d9ae7ca77efc396e2d2e
 AUX gitea.logrotated 87 BLAKE2B 373830ddd6eed0ce2f0f7b1dab14e4a253e5a56a73f477cfadbc6deec373846d4df2d697735391581771699d5a6513acb0e14a446873de01eba10d19e3a6bd88 SHA512 798f3fc33026f19dd31ffa78b9b1ed313d7b82b19c047f509e896c1798b2925a1bb7c4998d98a6b47e728979bf7132fb1c2a80eb7fda096a763d6791631cb6d4
 AUX gitea.service 472 BLAKE2B 4c728e2987d0c0a86e65d4b9c1a59f6193ff8a3f9b066991a06f495ad1c5586b3497c71fca1cce5b65f167af09343e7bf3215ee5e8fdefa539e384198d2d88d6 SHA512 6666fe3b4cdbb78a58db4a6bf47a15e6be9ab30b666c6eb77a9e8a002d8c0abd510fc75ef463a11ee6892ab12c98943774616072cb64fd9f2fa42ff8f676aa95
 DIST gitea-1.5.0.tar.gz 18847969 BLAKE2B 59da59a3d08c64c066204f4764f14c4b257495aba7800e9d6ebfcab5ad12402ce6cd17f14ec2187f994b46d83cf587422d7b711ceea4a99cc366105bd374daa1 SHA512 06cbcadc138496abf500b8d219d0770c5f6b8af419f9c3733596ee7e20cb50235815433979b2b1daa0a6117e6eb84de9678667236549e018079c49b793f22d68
+DIST gitea-1.5.1.tar.gz 18843260 BLAKE2B 0c9e0e82de91938c6c8e64a2b3ff56d16a5bdde105e934dd29923f99185e924493239c00dab5fb1af83e3973be23f2e53729831a77a509bd626d4796ba794e56 SHA512 16d10d98caf377d3bd5b4933316290e853a8fc46f5fdb3c206b9607750b5bdbdfd5c50bf8dd59906d7476d0e9211a67332eb4b780d8d37cdfb1c0bc3141ceed7
 EBUILD gitea-1.5.0.ebuild 1892 BLAKE2B 09a05d287962d04ac368be5a9a20f65d1310231a55e90e10fb3dc9d2da79aaf94a16bf24a1f4d6be7cc27be4130a7e2edcf91fc05cad6c20077a98c09123e3b7 SHA512 aa22f9c026cb5741679c1fa8783ac9aceb1ff413d96e4a422e7f21ae5fd4ab12872b330fd58b790a9cfcf121a519a73a44016270a6919b1cd076a6ca70693998
-MISC ChangeLog 259 BLAKE2B 4a6ccb0cbc6b197f5287091e65b76c675b5fe1c03bb1f0341d692fafeb5cde9385232fdfe4765a2f2a118f4e57c23ad26c2a09a6866a19c662f3b1573de695f3 SHA512 4029687cd0a72bada1b983716a32b2468fd571c7513e3fad35e436251ddfad4358bf0841347ffcbaff5c47e8664662b3a52ec98a52e2f211e15a4bdd5a25d422
+EBUILD gitea-1.5.1.ebuild 1892 BLAKE2B 09a05d287962d04ac368be5a9a20f65d1310231a55e90e10fb3dc9d2da79aaf94a16bf24a1f4d6be7cc27be4130a7e2edcf91fc05cad6c20077a98c09123e3b7 SHA512 aa22f9c026cb5741679c1fa8783ac9aceb1ff413d96e4a422e7f21ae5fd4ab12872b330fd58b790a9cfcf121a519a73a44016270a6919b1cd076a6ca70693998
+MISC ChangeLog 393 BLAKE2B eb6676c026e3f303c23faf9a66261a394768a94f663eb0e0b5b41aa11097e3726b24006a01227ec6081f857e575b2f5cdd7b3da618de41df673e33878a55bb68 SHA512 d71088a75680a04a0767a013b7a28b586fc206301ba6651507b89a6efc0216efe5d635aba6c27775f6356dfe012374015e0c0e32a4bb564c0f8f9d91cdf4561d
 MISC metadata.xml 246 BLAKE2B 291057fd61e77f8d99f9518e3f709d79ab79ac5ac5ce1387d27a26cec6272698fe6bda7cfacaeb203411413ed003c71cdaead8316cd9e5a2c1ce1056637eaee4 SHA512 9af718c7e0ca960324b9fc168e85824099a5434a322d7da78dabc90b8cd3be2201a3eb321facd0df575fa1d0865c1f80280d290589f0ff1d27bdef575297abb7
